examples/networkpolicy0.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: test-allow-https
  namespace: default
spec:
  selector: app == 'k8s-example'
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: role == 'frontend'
      ports:
      - 443
