examples/networkpolicy1.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: test-allow-github
  namespace: default
spec:
  selector: app == 'k8s-example'
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: DNS_RESOLVER == 'github.com'
      ports:
      - 443
